--- a/tv-show-explorer-6cb2300f2e49cbc45084b940cc50ec69176c0ce6/src/themes/dark-theme.scss
+++ b/tv-show-explorer-6cb2300f2e49cbc45084b940cc50ec69176c0ce6/src/themes/dark-theme.scss
@@ -1,5 +1,7 @@
 $large-font: 20px;
 $small-font: 16px;
+$font-color: #efeff1;
+$font-color-two: #a7a7b3;
 
 /* width */
 ::-webkit-scrollbar {
@@ -22,56 +24,120 @@ $small-font: 16px;
 }
 
 #dark {
-  padding-left: 20px;
-  padding-right: 20px;
   // height: 100%;
-  background-color: #252429;
+  background-color: #242447;
   height: 100vh;
+
+  .content-wrapper {
+    background-color: #202040;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 20px;
+    margin-top: 50px;
+
+    height: 716px;
+  }
 
   .search {
     text-align: center;
-    padding-top: 20px;
+
+    &__logo {
+      position: absolute;
+      left: 80px;
+      top: 8px;
+      cursor: pointer;
+    }
 
     &__switch {
-      position: absolute;
-      top: 25px;
-      left: 5px;
       cursor: pointer;
-
       position: absolute !important;
-      top: 20px;
-      left: 20px;
+      top: 23px;
+      right: 80px;
+    }
+
+    &__switch .react-switch-bg {
+      background-color: #17172c !important;
+      border: 1px solid #1b1a33;
+      width: 69px !important;
+      height: 32px !important;
+      border-radius: 50px !important;
+    }
+    &__switch .react-switch-handle {
+      width: 28px;
+      height: 28px;
+      position: absolute !important;
+      right: 32px !important;
+      top: 4px !important;
+    }
+    &__switch svg {
+      width: 22px;
+      height: 22px;
+      background-image: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' xmlns='http://www.w3.org/2000/svg'%3E%3Crect opacity='0.4' width='22' height='22' rx='11' fill='%233B3A5C' /%3E%3Crect opacity='0.6' x='1' y='1' width='20' height='20' rx='10' fill='%234F4E6C' /%3E%3Crect opacity='0.6' x='2' y='2' width='18' height='18' rx='9' fill='%2361617B' /%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M4.25049 12.7562C5.02382 15.7714 7.75963 17.9999 11.0159 17.9999C14.8731 17.9999 18 14.8731 18 11.0159C18 7.75982 15.7717 5.02415 12.7569 4.25061C14.3431 5.35452 15.3812 7.191 15.3812 9.26996C15.3812 12.645 12.6452 15.381 9.27015 15.381C7.191 15.381 5.35436 14.3427 4.25049 12.7562Z' fill='%23FFC700' /%3E%3C/svg%3E");
+      position: absolute !important;
+      top: 5px !important;
+      left: 4px !important;
+    }
+    &__switch path {
+      display: none;
     }
     &__title {
-      color: #666666;
+      color: $font-color;
       margin-top: 0;
+      background-color: #202040;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      cursor: pointer;
     }
     &__container {
       display: flex;
       justify-content: center;
+      background: #202040;
+      // background: red;
+
+      border-radius: 16px;
+      margin: auto;
+      align-items: center;
+
+      // width: 593px;
+      // height: 52px;
+
+      // width: 595px;
+      // height: 54px;
+
+      width: 599px;
+      height: 56px;
     }
     &__input-container {
-      width: 218px;
+      width: 420px;
       position: relative;
     }
     &__input {
       padding: 10px;
       font-size: 16px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      // border: 1px solid #ddd;
+      // border: 4px solid #202040;
+      border: none;
+      height: 26px;
+      border-radius: 16px;
       margin-right: 2px;
       font-weight: 500;
+      background: #242447;
+      color: $font-color;
+      width: 100%;
+      outline: none;
     }
     &__suggestions-box {
-      border: 0 1px 1px 1px solid #ccc;
-      background-color: #fff;
-      max-height: 150px;
+      background-color: #202040;
       overflow-y: auto;
       position: absolute;
-      top: 43px;
-      left: 0;
-      width: 100%;
+      top: 46px;
+      left: -5px;
+      width: 444px;
       border-radius: 4px;
+      padding-top: 5px;
+      max-height: 118px;
+      border: 4px solid #202040;
+      border-top: 0;
     }
     &__suggestions {
       margin: 0;
@@ -80,44 +146,62 @@ $small-font: 16px;
       text-align: left;
       list-style-type: none;
       padding: 0;
+      background-color: #202040;
+      color: $font-color;
     }
     &__suggestion {
-      border: 1px solid;
+      border: 1px solid #202040;
       padding-top: 6px;
       cursor: pointer;
       padding-bottom: 6px;
       padding-left: 10px;
-      font-weight: 500;
+      border-radius: 16px;
+      font-weight: 400;
+      background: #242447;
+      margin-bottom: 4px;
     }
     &__suggestion:hover {
-      background-color: #b9b9b9;
+      background-color: #303057;
     }
     &__button {
-      background-color: #b39c4d;
-      color: #252429;
+      background-color: #fe5e52;
       border: none;
-      border-radius: 4px;
-      padding: 13px 20px 12px 20px;
-      margin-left: 2px;
+      padding: 12px 20px 11px 20px;
+      margin-left: 25px;
       cursor: pointer;
+      color: #fff;
+      font-weight: 600;
+      font-size: 16px;
+
+      border-radius: 16px;
+      width: 144px;
+      height: 46px;
     }
     &__button-disabled {
-      background-color: #b4b4b4;
-      color: #252429;
+      background-color: #949494;
       border: none;
-      border-radius: 4px;
-      padding: 13px 20px 12px 20px;
-      margin-left: 2px;
-      cursor: default;
+      padding: 12px 20px 11px 20px;
+      margin-left: 25px;
+      cursor: pointer;
+      color: #fff;
+      font-weight: 600;
+      font-size: 16px;
+
+      border-radius: 16px;
+      width: 144px;
+      height: 46px;
     }
   }
 
   .info {
     padding-top: 30px;
-    padding-bottom: 15px;
+    // padding-bottom: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
 
     &__data {
-      color: #666666;
+      // color: #666666;
+      color: $font-color-two;
       font-size: $large-font;
       font-weight: 700;
     }
@@ -132,9 +216,37 @@ $small-font: 16px;
 
   .graph {
     position: relative;
-    padding-top: 50px;
-    margin-top: 20px;
+    padding-top: 28px;
+    // margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 25px;
 
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    &__text {
+      color: $font-color;
+      font-size: 27px;
+      font-weight: 300;
+      // padding-top: 135px;
+      text-align: center;
+      max-width: 71%;
+      opacity: 0;
+      animation: fadeIn 1.5s ease-in forwards;
+
+      position: absolute;
+      top: 163px;
+    }
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
     &__error {
       display: block;
       color: #666666;
@@ -143,16 +255,45 @@ $small-font: 16px;
       text-align: center;
     }
     &__loading {
-      display: block;
-      color: #666666;
-      font-size: 24px;
-      font-weight: bold;
-      text-align: center;
+      // display: block;
+      // color: #666666;
+      // font-size: 24px;
+      // font-weight: bold;
+      // text-align: center;
+
+      margin-top: 170px;
     }
-    &__switch {
+    &__button-container {
       position: absolute !important;
-      top: 0;
-      left: 0;
+      top: -30px;
+      right: 20px;
+    }
+    &__button-left {
+      color: #ababab;
+      padding: 9px;
+      border-radius: 20px 0px 0px 20px;
+      border: 2px solid #17172f;
+      width: 110px;
+      cursor: pointer;
+      background: #1c1c39;
+    }
+    &__button-right {
+      background: none;
+      color: #ababab;
+      padding: 9px;
+      border-radius: 0px 20px 20px 0px;
+      border: 2px solid #17172f;
+      border-left: none;
+      width: 110px;
+      cursor: pointer;
+      background: #1c1c39;
+    }
+    &__button-active {
+      background: #2a2a53;
+      color: #efeff1;
+    }
+    &__switch .react-switch-bg {
+      background-color: #46467c !important;
     }
     &__bar-container {
       display: flex;
@@ -162,24 +303,33 @@ $small-font: 16px;
     }
     &__info {
       width: 30%;
-
       padding-left: 20px;
-      color: #666666;
+      // margin-top: 10px;
+      // color: #666666
+      color: $font-color-two;
       font-weight: 700;
       font-size: $large-font;
+    }
+    &__info-title {
+      color: $font-color;
+    }
+    &__info-year {
+      font-size: $small-font;
+      font-weight: 500;
     }
     &__info-star {
       color: #f4c519;
     }
     &__info-plot {
       font-size: $small-font;
+      font-weight: 300;
     }
     &__image-container {
       width: 100%;
       height: 300px;
       overflow: hidden;
       position: relative;
-
+      // margin-top: 10px;
       border-radius: 6px;
     }
     &__image {
@@ -200,6 +350,161 @@ $small-font: 16px;
     }
     &__bar {
       max-height: 65vh;
+    }
+  }
+}
+
+////////////////////////////////////////////////////
+/// LOADING ANIMATION //////////////////////////////
+////////////////////////////////////////////////////
+
+#dark {
+  .container {
+    display: block;
+    height: 100px;
+    width: 10px;
+    margin: 0 auto;
+    position: absolute;
+    left: calc(50% - 150px);
+  }
+  .baton {
+    display: block;
+    height: 2px;
+    width: 70px;
+    background-color: #6f372f;
+    animation: scale 1.25s infinite linear;
+    -webkit-transform-origin: 0;
+    -moz-transform-origin: 0;
+    -ms-transform-origin: 0;
+    -o-transform-origin: 0;
+    transform-origin: 0;
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+    &:before {
+      content: "";
+      display: block;
+      height: 5px;
+      width: 5px;
+      background-color: #fe847b;
+      position: absolute;
+      top: -2px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      border-radius: 5px;
+    }
+    &:after {
+      content: "";
+      display: block;
+      height: 5px;
+      width: 5px;
+      background-color: #fe847b;
+      position: absolute;
+      top: -2px;
+      right: 0;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      border-radius: 5px;
+    }
+  }
+
+  .metronome {
+    -webkit-transform-origin: 0;
+    -moz-transform-origin: 0;
+    -ms-transform-origin: 0;
+    -o-transform-origin: 0;
+    transform-origin: 0;
+    animation: metronome 1.25s infinite linear;
+  }
+
+  @for $i from 0 through 35 {
+    .baton-#{$i} {
+      height: 1px;
+      width: 150px;
+      position: absolute;
+      top: calc(50% - 8px);
+      -webkit-transform-origin: 100%;
+      -moz-transform-origin: 100%;
+      -ms-transform-origin: 100%;
+      -o-transform-origin: 100%;
+      transform-origin: 100%;
+      -webkit-transform: rotate($i * 10deg);
+      -moz-transform: rotate($i * 10deg);
+      -ms-transform: rotate($i * 10deg);
+      -o-transform: rotate($i * 10deg);
+      .baton,
+      .baton:after,
+      .metronome {
+        animation-delay: -$i * 0.14s;
+      }
+    }
+  }
+
+  @keyframes metronome {
+    0% {
+      -webkit-transform: rotate(-25deg);
+      -moz-transform: rotate(-25deg);
+      -ms-transform: rotate(-25deg);
+      -o-transform: rotate(-25deg);
+      transform: rotate(-25deg);
+    }
+    50% {
+      -webkit-transform: rotate(25deg);
+      -moz-transform: rotate(25deg);
+      -ms-transform: rotate(25deg);
+      -o-transform: rotate(25deg);
+      transform: rotate(25deg);
+    }
+    100% {
+      -webkit-transform: rotate(-25deg);
+      -moz-transform: rotate(-25deg);
+      -ms-transform: rotate(-25deg);
+      -o-transform: rotate(-25deg);
+      transform: rotate(-25deg);
+    }
+  }
+
+  @keyframes scale {
+    0% {
+      -webkit-transform: scaleX(1);
+      -moz-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+      -o-transform: scaleX(1);
+      transform: scaleX(1);
+    }
+    25% {
+      -webkit-transform: scaleX(0.74);
+      -moz-transform: scaleX(0.74);
+      -ms-transform: scaleX(0.74);
+      -o-transform: scaleX(0.74);
+      transform: scaleX(0.74);
+    }
+    50% {
+      -webkit-transform: scaleX(1);
+      -moz-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+      -o-transform: scaleX(1);
+      transform: scaleX(1);
+    }
+    75% {
+      -webkit-transform: scaleX(1.16);
+      -moz-transform: scaleX(1.16);
+      -ms-transform: scaleX(1.16);
+      -o-transform: scaleX(1.16);
+      transform: scaleX(1.16);
+    }
+    100% {
+      -webkit-transform: scaleX(1);
+      -moz-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+      -o-transform: scaleX(1);
+      transform: scaleX(1);
     }
   }
 }
